--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "@apollo/server": "^4.7.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "graphql": "^16.6.0",
     "mongoose": "^7.0.2"
   },
   "devDependencies": {
