--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "apollo-server": "^3.13.0",
+    "apollo-server-caching": "^3.3.0",
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "graphql": "^16.8.1"
