--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-server-caching": "^3.3.0",
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "graphql": "^16.8.1"
   }
 }
