--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
-    "apollo-server": "^3.13.0",
-    "apollo-server-caching": "^3.3.0",
-    "apollo-server-express": "^3.13.0",
+    "@apollo/server": "^4.7.1",
+    "apollo-server-errors": "^3.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.17.1",
     "graphql": "^16.8.1"
   }
 }
