--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.1",
+    "apollo-server-errors": "^3.3.1",
     "bcrypt": "^4.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
